fixed alignment issues in layout

--- a/app/content/layout.css
+++ b/app/content/layout.css
@@ -1,7 +1,3 @@
-html, body {
-    overflow: hidden;
-}
-
 .grey {
     background-color: #F8F8F8;
 }
